--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#people">People</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -60,7 +60,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <a href="#people" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -82,7 +82,7 @@
       </div>
     </header>
 
-    <section class="download bg-primary text-center" id="download">
+    <section class="people bg-primary text-center" id="people">
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
@@ -97,11 +97,11 @@
       </div>
     </section>
 
-    <section class="features" id="features">
+    <section class="projectss" id="projects">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Unlimited Features, Unlimited Fun</h2>
-          <p class="text-muted">Check out what you can do with this app theme!</p>
+          <h2>Unlimited Projects, Unlimited Fun</h2>
+          <p class="text-muted">Check out our cool projects!</p>
           <hr>
         </div>
         <div class="row">
