--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Gupta Lab home</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -44,7 +44,7 @@
               <a class="nav-link js-scroll-trigger" href="#people">People</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Publications</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -60,7 +60,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">The Advanced X-ray Imaging Sciences center at MGH</h1>
-              <a href="#people" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <!-- <a href="#people" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a> -->
             </div>
           </div>
           <div class="col-lg-5 my-auto">
