--- a/index2.html
+++ b/index2.html
@@ -13,11 +13,20 @@
 
     #nav {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         background-color: #563d7c;
         position: fixed;
         width:100%;
-        padding-right:40px;
+        /*padding-right:40px;*/
+        padding: 10px;
+
+    }
+
+    #right-nav{
+        padding-right: 20px;
+    }
+    #left-nav{
+        padding-left: 20px;
     }
 
     #nav a {
@@ -88,16 +97,23 @@
 
 <body>
 
-    <div class='outer-wrapper'>
+    <div id='home'>
+
         <div id='nav'>
-            <a class='nav-item' href='#people'>People </a>
-            <a class='nav-item' href='#projects'>Projects </a>
-            <a class='nav-item' href='#contact'>Contact </a>
+            <div id='left-nav'>
+                <a class='nav-item' href="#home">Gupta Lab Home </a>
+            </div>
+
+            <div id='right-nav'>
+                <a class='nav-item' href='#people'>People </a>
+                <a class='nav-item' href='#projects'>Projects </a>
+                <a class='nav-item' href='#contact'>Contact </a>
+            </div>
         </div>
 
         <div id='lab'>
             <div class='overview-content lab-item'>
-                The Gupta Lab is Awesome. We do XRays and Wow!
+                The Advanced X-ray Imaging Sciences center at MGH
             </div>
 
             <div class='lab-item'>
@@ -112,16 +128,25 @@
                     <p class='people-item-name'>Dr. Gupta
                     <p class='people-item-title'>The Big Boss
                     <p class='people-item-bio'> This is the bio for Dr. Gupta. It
-                        has several sentences. And kinda rambles on and on.
+                        has several sentences.
+                </div>
+            </div>
+            <div class='people-item'>
+                <img src='img/dzo.png'></img>
+                <div class='people-item-content'>
+                    <p class='people-item-name'>Wolfgang Krull
+                    <p class='people-item-title'>What is your position title?
+                    <p class='people-item-bio'> This is the bio for Wolfgang. It
+                        has several sentences.
                 </div>
             </div>
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
                     <p class='people-item-name'>Avilash Cramer
-                    <p class='people-item-title'>Top Top Serf
+                    <p class='people-item-title'>PhD student
                     <p class='people-item-bio'> This is the bio for Avilash. It
-                        has several sentences. And kinda rambles on and on.
+                        has several sentences.
                 </div>
             </div>
         </div>
