--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,6 @@
         background-color: #563d7c;
         position: fixed;
         width:100%;
-        /*padding-right:40px;*/
         padding: 10px;
 
     }
@@ -56,6 +55,8 @@
         margin:100px;
         margin-top: 150px;
         text-align: center;
+        border:1px solid navy;
+        border-radius: 10px;
     }
 
     #people {
@@ -113,7 +114,7 @@
 
         <div id='lab'>
             <div class='overview-content lab-item'>
-                The Advanced X-ray Imaging Sciences center at MGH
+                The Advanced X-ray Imaging Sciences Center at MGH
             </div>
 
             <div class='lab-item'>
