changed title bar

--- a/index2.html
+++ b/index2.html
@@ -104,8 +104,9 @@
             </div>
 
             <div id='right-nav'>
+                <a class='nav-item' href='#projects'>About </a>
                 <a class='nav-item' href='#people'>People </a>
-                <a class='nav-item' href='#projects'>Projects </a>
+                <a class='nav-item' href='#people'>Publications </a>
                 <a class='nav-item' href='#contact'>Contact </a>
             </div>
         </div>
