--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 <style>
 
     body {
@@ -14,7 +16,7 @@
     #nav {
         display: flex;
         justify-content: space-between;
-        background-color: #563d7c;
+        background-color: #000066;
         position: fixed;
         width:100%;
         padding: 10px;
@@ -41,10 +43,15 @@
         display: flex;
         padding-bottom: 80px;
         padding-top: 80px;
+        background-color: #e0e0eb;
+        color: #66ffff;
+        font-family: 'Open Sans Condensed', sans-serif;
+
     }
 
     .lab-item {
         margin: 50px;
+
     }
 
     .lab-item img {
@@ -52,10 +59,11 @@
     }
 
     .overview-content {
-        font-size: 30px;
+        font-size: 40px;
         margin:100px;
         margin-top: 150px;
         text-align: center;
+        color: #800000;
     }
 
     #projects {
@@ -85,7 +93,7 @@
     }
 
     .projects-pictures img {
-        width: 200px;
+        width: 240px;
         height: 160px;
         margin: 40px;
 
@@ -109,25 +117,28 @@
     }
 
     .people-item img {
-        height:100px;
-        width: 100px;
+        height:150px;
+        width: 150px;
     }
 
     .people-item-name {
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .people-item-title {
-        font-size: 10px;
+        font-size: 12px;
         color: #555555;
     }
 
     .people-item-bio {
-        font-size: 9px;
+        font-size: 11px;
         color:#333333;
+        max-width: 600px;
     }
 
     #publications {
+
+        background-color: #ffddcc;
 
     }
 
@@ -175,8 +186,9 @@
             </div>
 
             <div class='lab-item'>
-                <img src='img/geant_copy.png'></img>
+                <img src='img/static_ct_cad.jpg'></img>
             </div>
+
         </div>
 
         <div>
@@ -187,26 +199,27 @@
             </div>
 
             <div class='projects-abstract'>
-                <label> Dr. Gupta is a staff neuroradiologist and ER radiologist
-                    in the Department of Radiology at Massachusetts General Hospital,
-                    an Associate Professor of radiology at the Harvard Medical School,
-                    and a lecturer in Mechanical Engineering at MIT. He is
-                    interested in both research and clinical practice of radiology,
-                    currently devoting approximately 50% of his time to each of
-                    these activities. He also directs the Advanced X-ray Imaging
-                    Sciences (AXIS) Center at Mass General. His research is currently
-                    focused on three main topics: 1) development and clinical
-                    applications of novel X-ray imaging modalities including
-                    phase contrast imaging, ultra-high resolution computed
-                    tomography (CT), and dual-energy CT; 2) development of low-cost
-                    devices for imaging and image-guided interventions; and 3)
-                    study of traumatic brain injury (TBI) using advanced, quantitative
-                    MRI techniques.</label>
+                <label>
+                    The lab of Dr. Rajiv Gupta is broadly focused on making radiography tools safer and more accessible.
+                    Our lab is comprised of scientists and engineers from a variety of backgrounds.
+                    Currently, we have 4 major projects:
+                    <br>
+                    <br>
+                    1) The development of a portable computed tomography (CT) system.
+                    <br>
+                    2) Using consumer electronics to create an ultra low cost clincial
+                    x-ray detection system
+                    <br>
+                    3) Development of theory and hardware for time-of-flight x-ray imaging techniques.
+                    <br>
+                    4) Development a of nanoscale x-ray imaging system for printed
+                    circuit board (PCB) evaluation.
+                </label>
             </div>
             <div class='projects-pictures'>
-                <img src='img/dzo.png'></img>
-                <img src='img/dzo.png'></img>
-                <img src='img/dzo.png'></img>
+                <img src='img/geant_copy.png'></img>
+                <img src='img/channeltron.jpg'></img>
+                <img src='img/Screenshot.jpg'></img>
             </div>
 
         </div>
@@ -219,17 +232,19 @@
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
-                    <p class='people-item-name'>Dr. Gupta
-                    <p class='people-item-title'>The Big Boss
-                    <p class='people-item-bio'> This is the bio for Dr. Gupta. It
-                        has several sentences.
+                    <p class='people-item-name'>Dr. Rajiv Gupta, MD, PhD
+                    <p class='people-item-title'>email address
+                    <p class='people-item-bio'> Dr. Gupta is a staff neuroradiologist and ER radiologist
+                        in the Department of Radiology at Massachusetts General Hospital,
+                        an Associate Professor of radiology at the Harvard Medical School,
+                        and a lecturer in Mechanical Engineering at MIT.
                 </div>
             </div>
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
                     <p class='people-item-name'>Wolfgang Krull
-                    <p class='people-item-title'>What is your position title?
+                    <p class='people-item-title'>Email address
                     <p class='people-item-bio'> This is the bio for Wolfgang. It
                         has several sentences.
                 </div>
@@ -238,8 +253,8 @@
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
-                    <p class='people-item-name'> Xiaochun Lai
-                    <p class='people-item-title'> Postdoctoral Fellow
+                    <p class='people-item-name'> Dr. Xiaochun Lai, PhD
+                    <p class='people-item-title'> email address
                     <p class='people-item-bio'> This is the bio for Xiaochun. It
                         has several sentences.
                 </div>
@@ -248,8 +263,8 @@
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
-                    <p class='people-item-name'> Dufan Wu
-                    <p class='people-item-title'> Postdoctoral Fellow
+                    <p class='people-item-name'> Dr. Dufan Wu, PhD
+                    <p class='people-item-title'> email address
                     <p class='people-item-bio'> This is the bio for Dufan. It
                         has several sentences.
                 </div>
@@ -259,7 +274,7 @@
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
                     <p class='people-item-name'>Achuta Kadambi
-                    <p class='people-item-title'>PhD student
+                    <p class='people-item-title'> email address
                     <p class='people-item-bio'> This is the bio for Achuta. It
                         has several sentences.
                 </div>
@@ -267,12 +282,17 @@
 
 
             <div class='people-item'>
-                <img src='img/dzo.png'></img>
+                <img src='img/IMG_0564.jpg'></img>
                 <div class='people-item-content'>
                     <p class='people-item-name'>Avilash Cramer
-                    <p class='people-item-title'>PhD student
-                    <p class='people-item-bio'> This is the bio for Avilash. It
-                        has several sentences.
+                    <p class='people-item-title'>avilash@mit.edu
+                    <!-- <p class='people-item-title'>PhD student, Harvard-MIT Division of Health Sciences &amp; Technology -->
+                    <p class='people-item-bio'> A medical engineering PhD student at MIT, Avilash's research is focused on the electrical and mechanical design of
+                        x-ray hardware. In particular, he is interested in improving trauma care in remote and low-income communities.
+                        Avilash is a former wilderness EMT, and a 2014-2015 Fulbright scholar in rural India.
+                        He graduated with honors in physics from Brown University in 2014.
+                        <br>
+                        When not in lab, Avilash can usually be found climbing.
                 </div>
             </div>
         </div>
@@ -282,15 +302,22 @@
             </div>
             <label class='pubtype'> Papers </label>
             <ul class='publist'>
-                <li> Pub1 </li>
-                <li> Pub2 </li>
-                <li> Pub3 </li>
+                <li> Zucker EJ, Ganguli S, Ghoshhajra BB, Gupta R, Prabhakar A. Imaging of venous compression syndromes. Cardiovascular Diagnosis and Therapy, 2016;6:519-32, doi: 10.21037/cdt.2016.11.19, 2016 </li>
+                <br>
+                <li> Ando M, Sunaguchi N, Shimao D, Pan A, Yuasa T, Mori K, Suzuki Y, Jin G, Kim J-K, Lim J-H, Seo S-J, Ichihara S, Ohura N, Gupta R. Dark-Field Imaging: Recent Developments and Potential Clinical Applications. Physica Medica, Volume 32, Issue 12, December 2016, Pages 1801-1812, ISSN 1120-1797, http://dx.doi.org/10.1016/j.ejmp.2016.11.103 </li>
+                <br>
+                <li> Morotti A, Romero JM, Jessel MJ, Brouwers HB, Gupta R, Schwab K, Vashkevich A, Ayres A, Anderson CD, Gurol ME, Viswanathan A, Greenberg SM, Rosand J, Goldstein JN. Effect of CTA Tube Current on Spot Sign Detection and Accuracy for Prediction of Intracerebral Hemorrhage Expansion. AJNR Am J Neuroradiol. 2016 May 19. [Epub ahead of print] PubMed PMID: 27197985.</li>
             </ul>
             <label class='pubtype'> Patents </label>
             <ul class='publist'>
-                <li> Pat1 </li>
-                <li> Pat2 </li>
-                <li> Pat3 </li>
+                <li>  A. Kadambi, R. Raskar, A. Pan, R. Gupta. <i>Methods and Apparatus for X-Ray Imaging from
+Temporal Measurements. </i> US Patent App. 15/58,169 </li>
+                <br>
+                <li> Morse, T.F., Breuer K., Gupta R., Cramer A., Bull C., Waltz P. <i> Method and apparatus for creating coherent bundle
+of scintillating nanoparticles.</i> US patent no 9,611,168 </li>
+                <br>
+                <li> Gupta, R., and Sung, Y. <i> System and Method for Motion-Free Static Computed Tomography. </i> Patent application
+WO 2016007605 A1 </li>
             </ul>
             <label class='pubtype'> In the News </label>
             <ul class='publist'>
@@ -299,6 +326,8 @@
                      Avilash Cramer named 2017 Broshy fellowship award recipient </a> </li>
                 <li> <a href='http://imes.mit.edu/field-work-navajo-reservation/'>
                     Field Work on the Navajo Reservation </a> </li>
+                <br>
+                <br>
             </ul>
 
         </div>
@@ -310,7 +339,7 @@
                 <label>Email: rgupta1@mgh.harvard.edu </label> <br>
                 <label>Address: 149 13th street, Rm. 2.406 </label> <br>
                 <label>Charlestown, MA, 02129 </label> <br>
-                
+
             </div>
         </div>
 
