added institution shields to contact bar

--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@
         font-size: 40px;
         margin:100px;
         margin-top: 150px;
+        margin-bottom: 50px;
         text-align: center;
         color: #800000;
+    }
+
+    .logos img{
+        margin-bottom: 50px;
+        /*height: 50px;*/
+        width: 100%;
+
     }
 
     #projects {
@@ -156,9 +164,11 @@
 
     .contactLine{
         margin-top: 30px;
-        margin-bottom: 200px;
+        margin-bottom: 50px;
         text-align: center;
     }
+
+
 
 </style>
 </head>
@@ -166,6 +176,7 @@
 <body>
 
     <div id='home'>
+
 
         <div id='nav'>
             <div id='left-nav'>
@@ -180,6 +191,8 @@
             </div>
         </div>
 
+
+
         <div id='lab'>
             <div class='overview-content lab-item'>
                 The Advanced X-ray Imaging Sciences Center at MGH
@@ -189,7 +202,10 @@
                 <img src='img/static_ct_cad.jpg'></img>
             </div>
 
+
         </div>
+
+
 
         <div>
 
@@ -339,8 +355,14 @@ WO 2016007605 A1 </li>
                 <label>Email: rgupta1@mgh.harvard.edu </label> <br>
                 <label>Address: 149 13th street, Rm. 2.406 </label> <br>
                 <label>Charlestown, MA, 02129 </label> <br>
-
             </div>
+
+            <!-- <div id = 'header'> -->
+            <div class='logos'>
+                <img src='img/shields.png'></img>
+            </div>
+            <!-- </div> -->
+
         </div>
 
 </body>
