--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ WO 2016007605 A1 </li>
 
         </div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>
 
         <!-- smoother nav links -->
     <script type="text/javascript">
