added Dufan's bio

--- a/index.html
+++ b/index.html
@@ -287,8 +287,12 @@
                 <div class='people-item-content'>
                     <p class='people-item-name'> Dr. Dufan Wu, PhD
                     <p class='people-item-title'> email address
-                    <p class='people-item-bio'> This is the bio for Dufan. It
-                        has several sentences.
+                    <p class='people-item-bio'> A post-doctoral research fellow
+                        in the Gordon Center for Medical Imaging, Massachusetts
+                        General Hospital and Harvard Medical School, Dufan’s research
+                        interests are in medical image reconstruction, analysis and machine learning.
+                        Currently he is working on deep learning aided CT image reconstruction algorithms.
+                        Dufan got his PhD in engineering physics from Tsinghua University, China in 2016.
                 </div>
             </div>
 
