--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
             <div class='people-item'>
                 <img src='img/dzo.png'></img>
                 <div class='people-item-content'>
+                    <p class='people-item-name'>Tim Moulton
+                    <p class='people-item-title'>Email address
+                    <p class='people-item-bio'> This is the bio for Tim. It
+                        has several sentences.
+                </div>
+            </div>
+
+            <div class='people-item'>
+                <img src='img/dzo.png'></img>
+                <div class='people-item-content'>
                     <p class='people-item-name'> Dr. Xiaochun Lai, PhD
                     <p class='people-item-title'> email address
                     <p class='people-item-bio'> This is the bio for Xiaochun. It
